# vitaQmBluetooth

./: .clang-format  .clang-tidy  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  color-test.sh  consecutive-check.awk  exports.yml  exports.yml.in
.github/actions/clang/: action.yml
.github/actions/vitasdk/: action.yml
.github/workflows/: ci.yml  consecutive-check.awk  minor.yml  release.yml
cmake/: common.cmake
include/: bridge.h  config.h.in  kbluetooth.h  log.h  logfile.c  logfile.h  sce_const.h  sce_const_state.h  syscalls.h  vqmbt.h
include/vqmbt/: log.h  vqmbt.h
module_kernel/: CMakeLists.txt  exports.yml.in
module_kernel/src/: bluetooth.c  bluetooth.h  bt_event.c  bt_event.h  bt_events.c  bt_events.h  common.h  delme.c  log.h  logfile.c  logfile.h  main.c  sce_const.h  sce_const_event.h  syscall.h  umod_callback.c  umod_callback.h  user_callback.c  user_callback.h
module_user/: CMakeLists.txt  exports.yml.in
module_user/src/: delme.c  events.c  events.h  kmod_event.c  kmod_event.h  log.h  logfile.c  logfile.h  main.c  mutex.h  notify.c  notify.h  qm_ids.h  qm_state.c  qm_state.h  quickmenu.c  quickmenu.h
redist/quickmenureborn/: README.md
src/: config.h  log.h  main.c  quickmenu.c  quickmenu.h
tests/: .clang-tidy  CMakeLists.txt
tests/module_kernel/: test_bluetooth.c  test_delme.c
tests/module_user/: test_qm_state.c
tests/module_user/qm_state_c/: test_bulk_update.c  test_trans.c  test_transition_state_error.c
tests/shims/: shims.c
tests/shims/psp2/: rtc.h  types.h
tests/shims/psp2/kernel/: clib.h  modulemgr.h  threadmgr.h
tests/shims/psp2/kernel/threadmgr/: lw_mutex.h  thread.h
tests/shims/psp2common/: types.h
tests/shims/quickmenureborn/: c_types.h  qm_reborn.h
tests/shims/vitasdk/: build_utils.h
